[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/backgrounds/cover.png" type="Texture" id=1]
[ext_resource path="res://GodetteVN/titleScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/ArchitectsDaughter.ttf"

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = SubResource( 1 )

[node name="titleScreen" type="CanvasLayer"]
layer = 5
script = ExtResource( 2 )

[node name="cover" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -360.0
rect_min_size = Vector2( 1920, 1080 )
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameTitle" type="RichTextLabel" parent="."]
margin_left = 35.0
margin_top = 23.0
margin_right = 718.0
margin_bottom = 166.0
custom_colors/default_color = Color( 0.141176, 0.0784314, 0.0784314, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Example Project"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="newGameButton" type="Button" parent="."]
margin_left = 176.157
margin_top = 937.481
margin_right = 432.157
margin_bottom = 1014.48
focus_mode = 0
custom_colors/font_color = Color( 0.956863, 0.0980392, 0.0980392, 1 )
custom_colors/font_color_hover = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "New Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitButton" type="Button" parent="."]
margin_left = 1003.1
margin_top = 935.84
margin_right = 1097.1
margin_bottom = 1012.84
focus_mode = 0
custom_colors/font_color = Color( 0.0705882, 0.501961, 0.14902, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadButton" type="Button" parent="."]
margin_left = 523.146
margin_top = 937.795
margin_right = 649.146
margin_bottom = 1014.8
focus_mode = 0
custom_colors/font_color = Color( 0.490196, 0.0941176, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "Load"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingsButton" type="Button" parent="."]
margin_left = 740.343
margin_top = 936.483
margin_right = 935.343
margin_bottom = 1013.48
focus_mode = 0
custom_colors/font_color = Color( 0.956863, 0.380392, 0.0980392, 1 )
custom_colors/font_color_hover = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="newGameButton" to="." method="_on_newGameButton_pressed"]
[connection signal="pressed" from="exitButton" to="." method="_on_exitButton_pressed"]
[connection signal="pressed" from="loadButton" to="." method="_on_loadButton_pressed"]
[connection signal="pressed" from="settingsButton" to="." method="_on_settingsButton_pressed"]
